Add FootMarker data class Add FootMarkerDao for database access Create FootMarkerDatabase Implement LocationRepository for managing location data Create LocationServicePreferencesHelper for managing service status

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,11 @@
     <string name="title_home">Home</string>
     <string name="title_settings">Setttings</string>
 
-    <string name="permission_rationale">Ayak izinizi takip edebilmemiz için konum erişimine izin verin.</string>
+    <string name="dialog_permission_title">İzin Bildirimi</string>
+    <string name="dialog_permission_message">Uygulamanın fonksiyonlarının çalışabilmesi için lütfen izinleri onaylayın.</string>
+    <string name="dialog_permissions_open_settings">AYARLAR</string>
+    <string name="dialog_permissions_later">SONRA</string>
+    <string name="button_start_service">BAŞLAT</string>
+    <string name="button_stop_service">DURDUR</string>
+    <string name="button_clear">TEMİZLE</string>
 </resources>
